[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Will Usher <will@willusher.io>"]
edition = "2021"

[dependencies]
wgpu = "0.12"
winit = "0.26"
futures = "0.3"
egui = "0.18.1"
egui-wgpu = { git = "https://github.com/geolehmann/egui", features = ["winit"] }
egui-winit = { git = "https://github.com/geolehmann/egui", default-features = false}

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

