[package]
name = "wgpu-test"
version = "0.1.0"
authors = ["Christian Lehmann <clehmann@ucm.es>"]
edition = "2021"

[dependencies]
#wgpu = "0.12"
wgpu = { git = "https://github.com/gfx-rs/wgpu" }
winit = "0.26"
futures = "0.3"
egui = { git = "https://github.com/geolehmann/egui" }
egui-wgpu = { git = "https://github.com/geolehmann/egui", features = ["winit"] }
egui-winit = { git = "https://github.com/geolehmann/egui", default-features = false}

[target.wasm32-unknown-unknown.dependencies]
console_error_panic_hook = "0.1"
console_log = "0.2"
web-sys = "0.3"
wasm-bindgen-futures = "0.4"

